// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Loader /> should render Loader correctly with empty size props 1`] = `
<styled.div>
   
  <Styled(Spinner)
    height={30}
    size=""
    width={30}
  />
</styled.div>
`;

exports[`Test <Loader /> should render Loader correctly with large props 1`] = `
<styled.div>
   
  <Styled(Spinner)
    height={35}
    size="large"
    width={35}
  />
</styled.div>
`;

exports[`Test <Loader /> should render Loader correctly with small props 1`] = `
<styled.div>
   
  <Styled(Spinner)
    height={25}
    size="small"
    width={25}
  />
</styled.div>
`;
